--- a/functions/package.json
+++ b/functions/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0",
-    "typescript": "^4.9.0"
+    "typescript": "^4.9.0",
+    "axios": "^1.3.2"
   },
   "devDependencies": {
     "@types/chai": "^4.3.4",
@@ -22,7 +23,6 @@
     "eslint": "^8.15.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-config-google": "^0.14.0",
-    "axios": "^1.3.2",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "ts-node": "^10.4.0"
